--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: DRUM.DOG BLOG
+subtitle: Where the drum.dog and friends talk about all things drums.
 use-site-title: true
 ---
 
