--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: DRUM.DOG BLOG
-subtitle: Where the drum.dog and friends talk about all things drums.
+subtitle: Where the drum.dog and friends talk drums (and sticks)
 use-site-title: true
 ---
 
